--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goth-gf",
+  "name": "gothgf",
   "version": "1.0.0",
   "description": "A nice goth gf, just for you.",
   "main": "gothgf.js",
